<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorBackground1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainPageActivity">

    <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="3">

        <android.support.v7.widget.AppCompatTextView
                android:text="@string/appTitle"
                android:gravity="center"
                android:textSize="30sp"
                app:fontFamily="@font/roboto"
                android:textColor="@color/colorFont1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp" android:layout_marginEnd="5dp">
        </android.support.v7.widget.AppCompatTextView>

    </LinearLayout>

    <ScrollView
            android:requiresFadingEdge="vertical"
            android:fadingEdgeLength="150dp"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="15"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_accelerometer"
                        android:text="@string/accelerometer"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_accelerometer"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_gravity"
                        android:text="@string/gravity"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_gravity"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_gyroscope"
                        android:text="@string/gyroscope"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_gyroscope"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_light"
                        android:text="@string/light"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_light"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_linearAcceleration"
                        android:text="@string/linearAcceleration"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_linearAcceleration"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_magneticField"
                        android:text="@string/magneticField"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_magneticField"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_proximity"
                        android:text="@string/proximity"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_proximity"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_rotationVector"
                        android:text="@string/rotationVector"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_rotationVector"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_gpsPosition"
                        android:text="@string/gpsPosition"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_gpsPosition"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="2">

        <EditText
                android:id="@+id/editText_mDelay"
                android:inputType="number"
                android:hint="@string/delay"
                android:textSize="23sp"
                android:textColor="@color/colorFont1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:ems="10"
                android:layout_width="0dp"
                android:layout_height="50dp" android:layout_weight="9"
                android:layout_marginRight="5dp" android:layout_marginEnd="5dp"
                android:layout_marginLeft="20dp" android:layout_marginStart="20dp"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_record"
                android:text="@string/record"
                android:textSize="23sp"
                android:textColor="@color/colorFont1"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button_selected"
                android:layout_width="0dp"
                android:layout_height="50dp" android:layout_weight="9"
                android:layout_marginLeft="5dp" android:layout_marginStart="5dp"
                tools:ignore="NestedWeights"/>

        <ImageButton
                android:id="@+id/imageButton_record"
                android:layout_width="0dp"
                android:background="@color/colorBackground1"
                android:layout_height="match_parent" android:layout_weight="2"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                android:contentDescription="@string/todo"
                android:layout_marginRight="50dp" android:layout_marginEnd="20dp"/>

    </LinearLayout>

    <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/textView2" android:layout_weight="1"/>


</LinearLayout>